B-68612 Tech Debt: FDA: replace Collections.singleton() by Set.of() in packages dist-foreign-domain, dist-foreign-integration, dist-foreign-repository.