@@ -14,10 +14,10 @@ import com.google.common.collect.Maps;
 import org.apache.commons.collections4.CollectionUtils;
 import org.springframework.stereotype.Repository;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 /**
  * Implementation of {@link IRightsholderDiscrepancyRepository}.
@@ -67,7 +67,7 @@ public class RightsholderDiscrepancyRepository extends BaseRepository implements
                                                                    Pageable pageable, Sort sort) {
         Map<String, Object> parameters = Maps.newHashMapWithExpectedSize(4);
         parameters.put(SCENARIO_ID_KEY, Objects.requireNonNull(scenarioId));
-        parameters.put("statuses", Collections.singleton(Objects.requireNonNull(status)));
+        parameters.put("statuses", Set.of(Objects.requireNonNull(status)));
         parameters.put("pageable", pageable);
         parameters.put("sort", sort);
         return selectList("IRightsholderDiscrepancyMapper.findByScenarioIdAndStatuses", parameters);
